<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>HoloBot</groupId>
	<artifactId>HoloBot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<description>Java Discord Bot</description>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- JDA Library -->
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>4.2.1_265</version>
		</dependency>

		<!-- Useful stuff for JDA -->
		<dependency>
			<groupId>com.jagrosh</groupId>
			<artifactId>jda-utilities</artifactId>
			<version>3.0.5</version>
			<scope>compile</scope>
			<type>pom</type>
		</dependency>

		<!-- Json simple to work json files -->
		<dependency>
			<groupId>org.apache.clerezza.ext</groupId>
			<artifactId>org.json.simple</artifactId>
			<version>0.4</version>
		</dependency>
		<!-- Gson to work with json objects -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>

		<!-- Akinator API wrapper -->
		<dependency>
			<groupId>com.github.markozajc</groupId>
			<artifactId>akiwrapper</artifactId>
			<version>1.5.1.1</version>
		</dependency>

		<!-- LavaPlayer Stuff -->
		<dependency>
			<groupId>com.sedmelluq</groupId>
			<artifactId>lavaplayer</artifactId>
			<version>1.3.75</version>
			<scope>system</scope>
			<systemPath>C:\Users\adria\git\Discord-Bot\lib\main-1.3.75.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.sedmelluq</groupId>
			<artifactId>common</artifactId>
			<version>1.1.2</version>
			<scope>system</scope>
			<systemPath>C:\Users\adria\git\Discord-Bot\lib\common-1.1.2.jar</systemPath>
		</dependency>

		<!-- Needed for Lavaplayer -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.14</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.34.0</version>
		</dependency>

		<!-- Logger Stuff -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
		</dependency>

		<!-- JLyrics for the <lyrics cmd -->
		<dependency>
			<groupId>com.jagrosh</groupId>
			<artifactId>JLyrics</artifactId>
			<version>0.3</version>
		</dependency>

		<!-- Plugins that extend the number of formats supported by ImageIO -->
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-jpeg</artifactId>
			<version>3.7.0</version>
		</dependency>
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-tiff</artifactId>
			<version>3.7.0</version>
		</dependency>

	</dependencies>

	<repositories>
		<!-- Repository for JDA -->
		<repository>
			<id>dv8tion</id>
			<name>m2-dv8tion</name>
			<url>https://m2.dv8tion.net/releases</url>
		</repository>

		<!-- Used by various dependencies -->
		<repository>
			<id>jcenter</id>
			<name>jcenter-bintray</name>
			<url>https://jcenter.bintray.com</url>
		</repository>
	</repositories>
</project>